--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -6,6 +6,10 @@
   font-weight: normal;
 }
 
+html {
+  font-size: clamp(0.6rem, 0.5vw + 0.6rem, 1.5rem);
+}
+
 body {
   min-height: 100vh;
   background: hsl(232, 1%, 3%);
